force-app/main/default/objects/Opportunity/fields/Accessories__c.field-meta.xml
<CustomField>
    <fullName>Accessories__c</fullName>
    <label>Accessories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zertona Total Paint Protection Package</fullName>
            </value>
            <value>
                <fullName>Thinkware Dash Cam H50 DVR(1-Channel)</fullName>
            </value>
            <value>
                <fullName>Garmin nuvi 2567LM Navigation System</fullName>
            </value>
            <value>
                <fullName>Headerset DVD Player with 9&quot; LED Screen</fullName>
            </value>
            <value>
                <fullName>Multimedia System with Nav &amp; Rev Cam</fullName>
            </value>
            <value>
                <fullName>Customized Magnetic Car Window Sunshades</fullName>
            </value>
            <value>
                <fullName>Rikecool Premium 28</fullName>
            </value>
            <value>
                <fullName>Side Steps</fullName>
            </value>
            <value>
                <fullName>Boot Cover</fullName>
            </value>
            <value>
                <fullName>Rear interactive Touchscreens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>