force-app/main/default/objects/Opportunity/fields/Call__c.field-meta.xml
<CustomField>
    <fullName>Call__c</fullName>
    <description>PDPA Call</description>
    <formula>Contact_Person__r.Call__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call</label>
    <type>Checkbox</type>
</CustomField>