force-app/main/default/objects/Opportunity/fields/Clash_Email1__c.field-meta.xml
<CustomField>
    <fullName>Clash_Email1__c</fullName>
    <label>Clash Email1</label>
    <type>Email</type>
</CustomField>