force-app/main/default/objects/Opportunity/fields/Clash_Email3__c.field-meta.xml
<CustomField>
    <fullName>Clash_Email3__c</fullName>
    <label>Clash Email3</label>
    <type>Email</type>
</CustomField>