force-app/main/default/objects/Opportunity/fields/Clash_Email5__c.field-meta.xml
<CustomField>
    <fullName>Clash_Email5__c</fullName>
    <label>Clash Email5</label>
    <type>Email</type>
</CustomField>