force-app/main/default/objects/Opportunity/fields/Clash_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Clash_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clash Opportunity</label>
    <type>Checkbox</type>
</CustomField>