force-app/main/default/objects/Opportunity/fields/COE__c.field-meta.xml
<CustomField>
    <fullName>COE__c</fullName>
    <label>COE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Guaranteed</fullName>
            </value>
            <value>
                <fullName>Non-Guaranteed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>