force-app/main/default/objects/Opportunity/fields/Contact_Id_Report__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_Report__c</fullName>
    <formula>CASESAFEID(Contact_Person__c)</formula>
    <label>Contact Id (Report)</label>
    <type>Text</type>
</CustomField>