force-app/main/default/objects/Opportunity/fields/Contact_PDPA__c.field-meta.xml
<CustomField>
    <fullName>Contact_PDPA__c</fullName>
    <formula>SUBSTITUTE(
IF(INCLUDES(Contact_Person__r.PDPA__c, &quot;SMS&quot;), &quot;SMS;&quot;, NULL) +
IF(INCLUDES(Contact_Person__r.PDPA__c, &quot;Call&quot;), &quot;Call;&quot;, NULL) +
IF(INCLUDES(Contact_Person__r.PDPA__c, &quot;Email&quot;), &quot;Email;&quot;, NULL),
&quot;;.&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact PDPA</label>
    <type>Text</type>
</CustomField>