force-app/main/default/objects/Opportunity/fields/Created_Updated_From_Channel__c.field-meta.xml
<CustomField>
    <fullName>Created_Updated_From_Channel__c</fullName>
    <label>Created/Updated From Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Upload</fullName>
            </value>
            <value>
                <fullName>Quick Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>