force-app/main/default/objects/Opportunity/fields/Custom_Quote__c.field-meta.xml
<CustomField>
    <fullName>Custom_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Quote</label>
    <type>Checkbox</type>
</CustomField>