force-app/main/default/objects/Opportunity/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <formula>IF(Contact_Person__r.Email != null, Contact_Person__r.Email, IF(Lead__r.Email != null, Lead__r.Email, &apos;&apos;))</formula>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>