force-app/main/default/objects/Opportunity/fields/Customer_type__c.field-meta.xml
<CustomField>
    <fullName>Customer_type__c</fullName>
    <formula>Contact_Person__r.Account_RecordType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer type</label>
    <type>Text</type>
</CustomField>