force-app/main/default/objects/Opportunity/fields/Date_Booked__c.field-meta.xml
<CustomField>
    <fullName>Date_Booked__c</fullName>
    <description>Date when opportunity status is changed to booked</description>
    <label>Date of Booking</label>
    <type>Date</type>
</CustomField>