force-app/main/default/objects/Opportunity/fields/EventRegistration__c.field-meta.xml
<CustomField>
    <fullName>EventRegistration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EventRegistration</label>
    <type>Checkbox</type>
</CustomField>