force-app/main/default/objects/Opportunity/fields/https_cyclecarriage_lightning_force_co__c.field-meta.xml
<CustomField>
    <fullName>https_cyclecarriage_lightning_force_co__c</fullName>
    <label>https://cyclecarriage.lightning.force.co</label>
    <summaryForeignKey>Marketing_Referral_Source__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>