force-app/main/default/objects/Opportunity/fields/Is_MIT_group_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_MIT_group_Member__c</fullName>
    <formula>IF( CONTAINS($CustomMetadata.MIT_Groups__mdt.MIT_Team_A.Team_Members2__c,OwnerId ), $CustomMetadata.MIT_Groups__mdt.MIT_Team_A.Team_Name__c, IF(CONTAINS($CustomMetadata.MIT_Groups__mdt.MIT_Team_B.Team_Members2__c,OwnerId),$CustomMetadata.MIT_Groups__mdt.MIT_Team_B.Team_Name__c, &apos;test&apos;))</formula>
    <label>Is MIT group Member</label>
    <type>Text</type>
</CustomField>