force-app/main/default/objects/Opportunity/fields/Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email__c</fullName>
    <formula>Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Email</label>
    <type>Text</type>
</CustomField>