force-app/main/default/objects/Opportunity/fields/Lead_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mobile__c</fullName>
    <formula>IF(ISBLANK(Lead__r.MobilePhone), Lead__r.Phone, Lead__r.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Mobile</label>
    <type>Text</type>
</CustomField>