force-app/main/default/objects/Opportunity/fields/Make_Model__c.field-meta.xml
<CustomField>
    <fullName>Make_Model__c</fullName>
    <label>Make/Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>