force-app/main/default/objects/Opportunity/fields/Marketing_Referral_Source_Count__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Referral_Source_Count__c</fullName>
    <label>Marketing Referral Source Count</label>
    <summaryForeignKey>Marketing_Referral_Source__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>