force-app/main/default/objects/Opportunity/fields/Model_c__c.field-meta.xml
<CustomField>
    <fullName>Model_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>