force-app/main/default/objects/Opportunity/fields/Model_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Model_Interested_In__c</fullName>
    <label>Model Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Niro</fullName>
            </value>
            <value>
                <fullName>Cerato K3 EX</fullName>
            </value>
            <value>
                <fullName>Cerato K3 SX</fullName>
            </value>
            <value>
                <fullName>Carens EX</fullName>
            </value>
            <value>
                <fullName>Carens SX</fullName>
            </value>
            <value>
                <fullName>Sportage GT</fullName>
            </value>
            <value>
                <fullName>Sportage SX</fullName>
            </value>
            <value>
                <fullName>Sorento 2.2D SX</fullName>
            </value>
            <value>
                <fullName>C3 Aircross</fullName>
            </value>
            <value>
                <fullName>GC4P</fullName>
            </value>
            <value>
                <fullName>DS7</fullName>
            </value>
            <value>
                <fullName>Stinger GT</fullName>
            </value>
            <value>
                <fullName>Stinger GT-Line</fullName>
            </value>
            <value>
                <fullName>Sorento GT-Line</fullName>
            </value>
            <value>
                <fullName>Cerato</fullName>
            </value>
            <value>
                <fullName>Certao K3 L</fullName>
            </value>
            <value>
                <fullName>Sorento GT</fullName>
            </value>
            <value>
                <fullName>C4 Cactus</fullName>
            </value>
            <value>
                <fullName>Grand C4 Spacetourer</fullName>
            </value>
            <value>
                <fullName>C5 Aircross</fullName>
            </value>
            <value>
                <fullName>DS3 Crossback</fullName>
            </value>
            <value>
                <fullName>Stonic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>