force-app/main/default/objects/Opportunity/fields/Online_Touchpoint_Count__c.field-meta.xml
<CustomField>
    <fullName>Online_Touchpoint_Count__c</fullName>
    <label>Online Touchpoint Count</label>
    <summaryFilterItems>
        <field>Models_Interested__c.Channel__c</field>
        <operation>equals</operation>
        <value>Online</value>
    </summaryFilterItems>
    <summaryForeignKey>Models_Interested__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>