force-app/main/default/objects/Opportunity/fields/Opportunity_Auto_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Auto_Name__c</fullName>
    <formula>If(!ISBLANK(Model_c__c), If(!ISBLANK( Contact_Person__c ), Contact_Person__r.LastName + &apos; - &apos; + Model_c__r.Name, Lead__r.LastName + &apos; - &apos; + Model_c__r.Name), If(!ISBLANK( Contact_Person__c ), Contact_Person__r.LastName, Lead__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Auto Name</label>
    <type>Text</type>
</CustomField>