force-app/main/default/objects/Opportunity/fields/Opportunity_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_By__c</fullName>
    <description>To capture the sales consultant who closed the opportunity</description>
    <label>Opportunity Closed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>