force-app/main/default/objects/Opportunity/fields/Opportunity_Score__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Score__c</fullName>
    <label>Opportunity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>