force-app/main/default/objects/Opportunity/fields/Preferred_Model__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Model__c</fullName>
    <description>Its a temporary field for saving the reference of Preferred_Model_c. We will replace this at the time of Preferred_Model_c deployment</description>
    <label>Preferred Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>