force-app/main/default/objects/Opportunity/fields/PriceAlert__c.field-meta.xml
<CustomField>
    <fullName>PriceAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PriceAlert</label>
    <type>Checkbox</type>
</CustomField>