force-app/main/default/objects/Opportunity/fields/Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Purchaser__c</fullName>
    <label>Purchaser</label>
    <length>200</length>
    <type>Text</type>
</CustomField>