force-app/main/default/objects/Opportunity/fields/Register_Date__c.field-meta.xml
<CustomField>
    <fullName>Register_Date__c</fullName>
    <description>New Car Register Date</description>
    <label>Register Date</label>
    <type>Date</type>
</CustomField>