force-app/main/default/objects/Opportunity/fields/Test_Drive__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Drive</label>
    <type>Checkbox</type>
</CustomField>