force-app/main/default/objects/Opportunity/fields/Used_Car_Quote__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Quote__c</fullName>
    <label>Used Car Quote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>