force-app/main/default/objects/Opportunity/fields/Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Master</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>