force-app/main/default/objects/Opportunity/fields/Year_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Ownership__c</fullName>
    <label>Year of Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>