force-app/main/default/objects/Opportunity/recordTypes/CITPC.recordType-meta.xml
<RecordType>
    <fullName>CITPC</fullName>
    <active>true</active>
    <businessProcess>OppSales</businessProcess>
    <label>CITPC</label>
</RecordType>