force-app/main/default/objects/Opportunity/recordTypes/KIACV.recordType-meta.xml
<RecordType>
    <fullName>KIACV</fullName>
    <active>true</active>
    <businessProcess>OppSales</businessProcess>
    <label>KIACV</label>
</RecordType>