force-app/main/default/objects/Opportunity/recordTypes/MAXUSPC.recordType-meta.xml
<RecordType>
    <fullName>MAXUSPC</fullName>
    <active>true</active>
    <businessProcess>OppSales</businessProcess>
    <description>MAXUSPC</description>
    <label>MAXUSPC</label>
</RecordType>