force-app/main/default/objects/Opportunity/listViews/All_Lost_Opportunities.listView-meta.xml
<ListView>
    <fullName>All_Lost_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Lead__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Rating__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Lost</value>
    </filters>
    <label>All Lost Opportunities</label>
    <sharedTo>
        <role>CITCV_Sales_Manager</role>
        <role>CITPC_Marketing_User</role>
        <role>CITPC_Sales_Admin</role>
        <role>CITPC_Sales_Consultant</role>
        <role>CITPC_Sales_Manager</role>
        <role>KIACV_Sales_Manager</role>
        <role>KIAPC_Marketing_User</role>
        <role>KIAPC_Sales_Admin</role>
        <role>KIAPC_Sales_Consultant</role>
        <role>KIAPC_Sales_Manager</role>
        <role>MITPC_Sales_Admin</role>
        <role>MITPC_Sales_Consultant</role>
        <role>MITPC_Sales_Manager</role>
    </sharedTo>
</ListView>