force-app/main/default/objects/Opportunity/listViews/AllHotOpportunities.listView-meta.xml
<ListView>
    <fullName>AllHotOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Lead__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Rating__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rating__c</field>
        <operation>equals</operation>
        <value>Hot</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.MIT</value>
    </filters>
    <label>All Hot Opportunities</label>
    <sharedTo>
        <role>CITCV_Sales_Manager</role>
        <role>CITPC_Sales_Admin</role>
        <role>CITPC_Sales_Consultant</role>
        <role>CITPC_Sales_Manager</role>
        <role>KIACV_Sales_Manager</role>
        <role>KIAPC_Sales_Manager</role>
        <role>MBC_Sales_Admin</role>
        <role>MBC_Sales_Consultant</role>
        <role>MITPC_Sales_Admin</role>
        <role>MITPC_Sales_Consultant</role>
        <role>MITPC_Sales_Manager</role>
    </sharedTo>
</ListView>