force-app/main/default/objects/Opportunity/listViews/CIT_DS_Inactive_Opportunity_Owners.listView-meta.xml
<ListView>
    <fullName>CIT_DS_Inactive_Opportunity_Owners</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Model_c__c</columns>
    <columns>Account_Record_Type__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Code__c</field>
        <operation>equals</operation>
        <value>CCK</value>
    </filters>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>contains</operation>
        <value>Alicia Nguan</value>
    </filters>
    <label>CIT/DS Inactive Opportunity Owners</label>
</ListView>