force-app/main/default/objects/Opportunity/listViews/ClosingNextMonth.listView-meta.xml
<ListView>
    <fullName>ClosingNextMonth</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Lead__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Rating__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>Closing Next Month</label>
    <sharedTo>
        <role>CITCV_Sales_Manager</role>
        <role>CITPC_Marketing_User</role>
        <role>CITPC_Sales_Admin</role>
        <role>CITPC_Sales_Consultant</role>
        <role>CITPC_Sales_Manager</role>
        <role>KIACV_Sales_Manager</role>
        <role>KIAPC_Marketing_User</role>
        <role>KIAPC_Sales_Admin</role>
        <role>KIAPC_Sales_Consultant</role>
        <role>KIAPC_Sales_Manager</role>
        <role>MITPC_Sales_Admin</role>
        <role>MITPC_Sales_Consultant</role>
        <role>MITPC_Sales_Manager</role>
    </sharedTo>
</ListView>