force-app/main/default/objects/Opportunity/listViews/Custom.listView-meta.xml
<ListView>
    <fullName>Custom</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Contact_Person__c</columns>
    <columns>Lead__c</columns>
    <columns>Model_c__c</columns>
    <columns>PriceAlert__c</columns>
    <columns>Test_Drive__c</columns>
    <columns>EventRegistration__c</columns>
    <columns>Custom_Quote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Stock Reserved</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Walk-in</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Booked</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Lost</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>japiuser</value>
    </filters>
    <label>Custom</label>
</ListView>