force-app/main/default/objects/Opportunity/listViews/MIT_Team_B.listView-meta.xml
<ListView>
    <fullName>MIT_Team_B</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Lead__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_MIT_group_Member__c</field>
        <operation>equals</operation>
        <value>MIT-Team B</value>
    </filters>
    <label>MIT - Team B</label>
    <sharedTo>
        <role>MITPC_Sales_Admin</role>
        <role>MITPC_Sales_Manager</role>
    </sharedTo>
</ListView>