force-app/main/default/objects/Opportunity/listViews/P6M_Prospects_edison.listView-meta.xml
<ListView>
    <fullName>P6M_Prospects_edison</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>equals</operation>
        <value>edison chan</value>
    </filters>
    <label>P6M Prospects_edison</label>
</ListView>